--- a/BlazorWithIdentity.Client/Pages/FetchData.razor
+++ b/BlazorWithIdentity.Client/Pages/FetchData.razor
@@ -38,7 +38,7 @@ else
 @functions {
     WeatherForecast[] forecasts;
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
         forecasts = await Http.GetJsonAsync<WeatherForecast[]>("api/SampleData/WeatherForecasts");
     }
