--- a/BlazorWithIdentity.Client/Pages/Counter.razor
+++ b/BlazorWithIdentity.Client/Pages/Counter.razor
@@ -4,6 +4,8 @@
 
 <p>Current count: @currentCount</p>
 
+<h2>Whoo doggy</h2>
+
 <button class="btn btn-primary" @onclick="@IncrementCount">Click me</button>
 
 @functions {
