--- a/BlazorWithIdentity.Client/_Imports.razor
+++ b/BlazorWithIdentity.Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using BlazorWithIdentity.Client.Services.Implementations
 @using BlazorWithIdentity.Client.States
 @using System.Security.Claims
+@using BlazorStrap
