--- a/BlazorWithIdentity.Client/Shared/MainLayout.razor
+++ b/BlazorWithIdentity.Client/Shared/MainLayout.razor
@@ -25,7 +25,8 @@
 
 
 @code {
-    protected override async Task OnInitAsync()
+
+    protected override async Task OnInitializedAsync()
     {
         await BootstrapCSS.SetBootstrapCSS("4.3.1");
     }
